# padel-finder

./: .gitignore  README.md  pyproject.toml
src/padel_finder/: __init__.py  cli.py  config.py  formatter.py  models.py  ranking.py  scraper.py
tests/: test_ranking.py  test_scraper.py
